--- a/src/directives/templates/styles/_mmsToolbar.scss
+++ b/src/directives/templates/styles/_mmsToolbar.scss
@@ -28,6 +28,7 @@
 	&:active {
 		background-color: white;
 		box-shadow: none;
+		transition: all .2s linear;
 	}
 
 	&:hover {
